# writty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDBOOK.md  PROMOTIONAL-BRIEF.md  README.md  RULEBOOK-AUDIT.md  SCALE_BENCHMARK_RESULTS.md  SKILL.md  out-of-the-box-rules.md  package.json  pyproject.toml  writ-absorbs-superpowers-plan.md  writ.toml
.claude/: CODEBASE.md
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: pre-validate-file.sh  validate-exit-plan.sh  validate-file.sh  validate-rules.sh  validate-test-file.sh  writ-context-watcher.sh  writ-mark-pending-test.sh  writ-postcompact.sh  writ-posttool-rag.sh  writ-pre-write-dispatch.sh  writ-quality-judge.sh  writ-run-pending-tests.sh  writ-verify-before-claim.sh
.claude/skills/skill-to-writ/: EDGE-CATALOG.md  EXEMPLARS.md  SCHEMA-REFERENCE.md  SKILL.md
.github/actions/setup-writ/: action.yml
.github/workflows/: pr.yml  publish.yml
benchmarks/: bench_targets.py
bible/: .export_timestamp
bible/animation/: ANIM-GSAP-AUTOALPHA-001.md  ANIM-GSAP-CAMELCASE-001.md  ANIM-GSAP-EASE-001.md  ANIM-GSAP-IMMEDIATERENDER-001.md  ANIM-GSAP-MATCHMEDIA-001.md  ANIM-GSAP-RETURNVAL-001.md  ANIM-GSAP-SVGORIGIN-001.md  ANIM-GSAP-TIMELINE-001.md  ANIM-GSAP-TRANSFORM-001.md  ANT-ANIM-DELAYCHAINING-001.md  ANT-ANIM-IMMEDIATERENDER-001.md  ANT-ANIM-LAYOUT-001.md  TEC-ANIM-DEFAULTS-001.md  TEC-ANIM-FUNCTIONVALS-001.md  TEC-ANIM-STAGGER-001.md
bible/architecture/: principles.md
bible/code-quality/: rules.md
bible/database/: sql-authoring.md
bible/editorial/: ANT-EDIT-ADHOC-001.md  ANT-EDIT-DIAMETER-001.md  ANT-EDIT-PHANTOM-001.md  ANT-EDIT-RESIDUAL-001.md  ANT-EDIT-SYMMETRY-001.md  EDIT-DATA-LABEL-001.md  EDIT-DATA-PALETTE-001.md  EDIT-DATA-REPEAT-001.md  EDIT-MERZ-DIAGONAL-001.md  EDIT-MERZ-FRAGMENT-001.md  EDIT-MERZ-GOVERN-001.md  EDIT-PROSE-CAPTION-001.md  EDIT-PROSE-FIGURE-001.md  EDIT-PROSE-MARBER-001.md  EDIT-SPEC-SCALE-001.md  EDIT-SPEC-WEINGART-001.md  EDIT-VIZ-LAYER-001.md  EDIT-VIZ-MULTIVAR-001.md  EDIT-VIZ-SPARKLINE-001.md  PBK-EDIT-ELENCHUS-001.md  PHA-EDIT-ELENCHUS-001.md  PHA-EDIT-ELENCHUS-002.md  PHA-EDIT-ELENCHUS-003.md  PHA-EDIT-ELENCHUS-004.md  PHA-EDIT-ELENCHUS-005.md  TEC-EDIT-ARCHITECTURE-001.md  TEC-EDIT-CONSTRUCTION-001.md  TEC-EDIT-PROSE-001.md  TEC-EDIT-TENSION-001.md  rules.md
bible/enforcement/: operational-claims.md  reasoning-discipline.md  security-boundaries.md  system-dynamics.md
bible/frameworks/magento/: implementation-constraints.md  runtime-constraints.md
bible/languages/php/: coding-standards.md  error-handling.md
bible/languages/python/: coding-standards.md
bible/methodology/: ENF-PROC-PLAN-001.md  ENF-PROC-TDD-001.md  PBK-AUTHOR-001.md  PBK-PROC-PLAN-001.md  SKL-PROC-BRAIN-001.md  SKL-PROC-PLAN-001.md  SKL-PROC-VERIFY-001.md
bible/performance/: profiling.md  rules.md
bible/security/: boundaries.md  rules.md
bible/testing/: rules.md  unit-testing.md
docs/: SUBMISSION.md  install-writ.md  phase-6-plan.md  plugin-validation.md
docs/extraction/: 04-cli-commands.md  05-http-api.md  08-testing-and-benchmarks.md  09-configuration-and-deployment.md
docs/monthly-reviews/: 2026-05.md
docs/pressure-runs/2026-04-22/PSR-005b/: take-after-snapshot.sh  (+1 more)
hooks/: hooks.json
scripts/: bootstrap-plugin.sh  bootstrap.sh  instrument-cold-start.py  instrument-corpus-stats.py  migrate.py  seed_phase_1a_injection.py  seed_phase_1b_auth.py  seed_phase_1c_crypto_headers_rate.py  seed_phase_1d_data_deps.py  seed_phase_2a_clean_dry.py  seed_phase_2b_solid_arch.py  seed_phase_3a_testing_error.py  seed_phase_3b_performance.py  seed_phase_4_scale_api_docs.py  seed_phase_5_process.py
templates/: CLAUDE.md  settings.json
tests/: _writ_cmd.py  conftest.py  test_always_on_methodology.py  test_analyzer_summary.py  test_authoring.py  test_bootstrap.py  test_context_watcher_block.py  test_context_watcher_compute.py  test_context_watcher_debounce.py  test_context_watcher_messages.py  test_embeddings.py  test_emit_summary.py  test_exit_code_audit.py  test_exit_plan_phase_reset.py  test_export.py  test_graph_proximity.py  test_hook_perf_floors.py  test_import_markdown_unified.py  test_ingest.py  test_integrity.py  test_log_friction_event.py  test_mark_pending_test_hook.py  test_methodology_ingest.py  test_methodology_migration.py  test_orchestrator_mode.py  test_phase2_gate_policy.py  test_phase2_hooks.py  test_phase5_analyzers.py  test_phase6a_node_models.py  test_phase6bcd_verification.py  test_phase6efg_corpus_promotion.py  test_phase6hi_methodology_retrieval_and_playbook_wiring.py  test_post_suite_neo4j_restoration.py  test_postcompact_resets_context_debounce.py  test_pre_write_dispatch_parsing.py  test_retrieval.py  test_server_format_endpoint.py  test_server_mode_canonicalization.py  test_test_paths.py  test_v1_punch_list.py  (+3 more)
tests/fixtures/: ground_truth_proc.candidates.json  ground_truth_queries.json  regression_floors.py
tests/plugin/: test_bootstrap_plugin.py  test_documentation.py  test_hooks_routing.py  test_marketplace_manifest.py  test_plugin_manifest.py
writ/: __init__.py  cli.py  gate.py  server.py
writ/analysis/: analyzer.py  friction.py
writ/compression/: clusters.py
writ/graph/: db.py  ingest.py  integrity.py  methodology_ingest.py  schema.py
writ/retrieval/: pipeline.py  ranking.py
(+2 files in other folders)
