[project]
name = "claude-writ"
version = "1.2.0"
description = "Hybrid RAG rule retrieval and session-aware workflow enforcement for Claude Code: a five-stage hybrid pipeline (BM25 + ANN + graph + RRF) over a Neo4j knowledge graph, wired into Claude Code via 30 hook scripts and a state machine."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Lucio Saldivar" },
]
keywords = [
    "claude-code",
    "rag",
    "rules",
    "enforcement",
    "neo4j",
    "fastapi",
    "hooks",
    "workflow",
    "code-quality",
    "ai-tooling",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Production runtime only. Anything imported by writ/ at request
    # time goes here. Build tooling (optimum, pytest, mypy) belongs in
    # [project.optional-dependencies] dev. The SentenceTransformer
    # fallback library belongs in [project.optional-dependencies]
    # fallback because the runtime imports it only when the operator
    # explicitly opts in via WRIT_ALLOW_EMBEDDING_FALLBACK=1.
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
    "neo4j>=5.0,<6",
    "tantivy>=0.22,<1",
    "hnswlib>=0.8,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "typer>=0.13,<1",
    "rich>=13,<14",
    # Required at runtime by writ/retrieval/embeddings.py for the ONNX
    # path. Production code imports onnxruntime to serve predictions
    # from the exported model. Without this declaration, fresh
    # installs of writ silently lacked the package, and build_pipeline
    # silently fell back to SentenceTransformer. The fallback path is
    # now gated behind WRIT_ALLOW_EMBEDDING_FALLBACK=1 (see
    # writ/retrieval/pipeline.py), so this dep must be present for
    # the daemon to start without an override.
    "onnxruntime>=1.20,<2",
]

[project.urls]
Homepage = "https://github.com/infinri/Writ"
Repository = "https://github.com/infinri/Writ"
Issues = "https://github.com/infinri/Writ/issues"
Changelog = "https://github.com/infinri/Writ/blob/main/CHANGELOG.md"
Documentation = "https://github.com/infinri/Writ#readme"

[project.optional-dependencies]
# Three-group partitioning rule, established 2026-05-14:
#   - [dependencies]: production runtime only. Imported by writ/ at
#                     request time.
#   - dev: build + test + maintenance tooling. Imported by scripts/
#          and tests/, never by the production code path. Includes
#          optimum (ONNX export tooling), pytest, mypy, ruff.
#   - fallback: the SentenceTransformer library, imported by the
#               WRIT_ALLOW_EMBEDDING_FALLBACK=1 branch in
#               writ/retrieval/pipeline.py and by maintainer-only
#               code paths (writ compress; integrity-check redundancy
#               detection). Opt-in: production daemons running on
#               ONNX never need it. Pulls ~5GB of torch + CUDA
#               transitives that are dead weight in lean installs.
# When adding a new dep, ask: is it imported by writ/ at request time
# (-> core), by scripts/tests (-> dev), or by the explicit fallback
# path (-> fallback)? Keep production deps lean.
dev = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "pytest-asyncio>=0.23,<1",
    "mypy>=1.11,<2",
    "ruff>=0.6,<1",
    # Build-time only: scripts/export_onnx.py uses optimum to convert
    # sentence-transformers/all-MiniLM-L6-v2 to the optimized ONNX
    # graph that the runtime path consumes via onnxruntime. The
    # runtime (writ/) never imports optimum. Kept out of core deps
    # to avoid bloating production installs with build-time tooling.
    "optimum[onnxruntime]>=2.0,<3",
]
fallback = [
    # Opt-in only. Required by:
    #   - writ/retrieval/pipeline.py when WRIT_ALLOW_EMBEDDING_FALLBACK=1
    #     and the operator has chosen to run the daemon on the
    #     SentenceTransformer path instead of the production ONNX
    #     path.
    #   - writ/cli.py `writ compress` command (maintainer-only: regenerates
    #     abstraction nodes).
    #   - writ/graph/integrity.py redundancy-similarity check (subset
    #     of `writ validate`).
    # Production daemons running on ONNX do not need this group. The
    # transitive cascade includes torch + nvidia CUDA libraries (~5GB).
    "sentence-transformers>=3.3,<4",
]
benchmark = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "memory-profiler>=0.61,<1",
]

[project.scripts]
writ = "writ.cli:app"

[tool.setuptools.packages.find]
include = ["writ*"]

[tool.pytest.ini_options]
markers = [
    "perf: hook latency p95 regression floor tests (Item 4)",
    "integration: tests that require a live Claude Code install or external service",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
